Prevent Product Tile images from stretching vertically

--- a/src/customizations/grid-product/_grid-product.scss
+++ b/src/customizations/grid-product/_grid-product.scss
@@ -206,6 +206,10 @@ $namespace: 'cs-';
         }
     }
 
+    &__image {
+        height: auto;
+    }
+
     &--static {
         padding: 1.5rem;
 
